# Uni-Notes

./: .gitignore  .gitmodules  README.md
Control-systems/: Compensators-Stability.tex  Control-systems.tex  Implementation.tex  Intro-Control.tex  Kalman-Filter.tex  Linear-Time-Invariat.tex  Nyquist-Plot.tex  Observer-Design.tex  Optimal-Control.tex  PID-Controllers.tex  Root-Locus.tex  Stability-Performance.tex  (+1 more)
ImageProcessing/: .envrc  commands.md  main.py  pyproject.toml
ImageProcessing/1/: 0_image fundamentals.ipynb  1_image_rotation.ipynb  1_image_rotation.py
ImageProcessing/10/: 10_pattern_classification_nn1.ipynb
ImageProcessing/11/: 11_pattern_classification_nn2.ipynb
ImageProcessing/2/: 2_hist_eq_filtering.ipynb
ImageProcessing/3/: 3_frequency_domain.ipynb
ImageProcessing/4/: 4_color_processing.ipynb
ImageProcessing/5/: 5_morphology.ipynb
ImageProcessing/6/: 6_segmentation_1.ipynb
ImageProcessing/7/: 7_segmentation_2.ipynb
ImageProcessing/8/: 8_feature_extraction.ipynb
ImageProcessing/9/: 9_pattern_classification_classical.ipynb
ImageProcessing/images/: WashingtonDC-mask-composite-512.tif  breast-implant.tif  checkerboard-clean.tif  checkerboard-noisy1.tif  checkerboard-noisy2.tif  lateral-head-CT-256-levels.tif  noisy-elliptical-object.tif  thumbprint.tif  washingtonDC-Band5-MiddleInfrared-512.tif  washingtonDC-Band6-ThermalInfrared-512.tif
ImageProcessing/notes/: main.typ
RoboticsComputerVision/ComputerVision/: pyproject.toml
RoboticsComputerVision/ComputerVision/1-CV/: NumericalSolutions.txt  exc_1_CV.mlx  py_cam_calibration.py
(+108 files in other folders)
