[project]
name = "imageprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "editdistance-s>=1.0.0",
  "jupytext>=1.17.3",
  "matplotlib>=3.10.6",
  "numpy>=2.3.2",
  "poetry>=2.1.4",
  "scikit-image>=0.25.2",
  "wheel>=0.45.1",
]
