[project]
name = "imageprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jupyter-collaboration>=4.1.1",
  "jupytext>=1.17.3",
  "matplotlib>=3.10.6",
  "notebook>=7.4.5",
  "numpy>=2.3.2",
  "opencv-python>=4.11.0.86",
  "scikit-image>=0.25.2",
]
